[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adp"
version = "0.0.1"
authors = [
    { name = "Caleb Belth" },
    { name = "Sarah Brogden Payne" },
    { name = "Jordan Kodner" },
    { name = "Charles Yang" },
]
description = "The ADP model, by the ADP research group."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache 2.0" }
keywords = [
    "computational linguistics",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/cbelth/adp"